--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,10 @@
 UI
-- Red Background logout menu item
++ Red Background logout menu item
 
 Logic
-- [Page] Class list
++ [Page] Class "Add student to class"
++ [Page] Class list
 + [Page] Parents see children's
-- [RENAME] app/class_room
++ [RENAME] app/class_room
 - [CHECK] all cascade Delete
 - [CHECK] all constrain regulations
